<resources>
    <string name="app_name">CatsMinesGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_settings">НАСТРОЙКИ ИГРЫ</string>
    <string name="object_quantity">Количество мышек</string>
    <string name="game_speed">Скорость мышек</string>
    <string name="play">ИГРАТЬ</string>
    <string name="game_pause">ПАУЗА</string>
    <string name="game_resume">ПРОДОЛЖИТЬ</string>
    <string name="game_exit">ВЫЙТИ</string>
    <string name="endGame">РАУНД ЗАВЕРШЁН</string>
    <string name="durationLabel">Время игры</string>
    <string name="durationValue">01:24</string>
    <string name="mouseHitsLabel">Поймано мышек</string>
    <string name="mouseHitsValue">7</string>
    <string name="totalClicksLabel">Количество попыток</string>
    <string name="totalClicksValue">20</string>
    <string name="accuracyLabel">Меткость</string>
    <string name="accuracyValue">35%</string>
    <string name="exit">Выход</string>
    <string name="replay">Играть снова</string>
    <string name="mouseCountValue">0</string>
    <string name="clickCounterValue">0</string>
    <string name="quantityValue">1/5</string>
    <string name="speedValue">1/3</string>
    <string name="totalMouseCountValue">45</string>
    <string name="startGame">НАЧАТЬ ИГРУ</string>
    <string name="statisticsLabel">Статистика</string>
    <string name="gameTimeAgo">Игра 1 мин. назад</string>
    <string name="gameDuration">Время игры: 01:24</string>
    <string name="gameMouseHits">Поймано мышек: 7</string>
    <string name="gameTotalClicks">Количество попыток: 20</string>
    <string name="gameAccuracy">Меткость: 35%</string>
</resources>