<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/game_time_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/gameTimeAgo"/>

        <TextView
            android:id="@+id/game_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameDuration"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/game_mouse_hits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameMouseHits"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/game_total_clicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameTotalClicks"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/game_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameAccuracy"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
