<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding"
    app:circularflow_radiusInDP="8dp"
    android:elevation="8dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_settings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_quantity"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/quantity_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quantityValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <SeekBar
        android:id="@+id/quantity_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="5"
        android:progress="1"
        android:min="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_label" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_speed"
        app:layout_constraintTop_toBottomOf="@id/quantity_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/speedValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_seekbar" />

    <SeekBar
        android:id="@+id/speed_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="3"
        android:progress="1"
        android:min="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_label" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintTop_toBottomOf="@id/speed_seekbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>